@@ -14,6 +14,7 @@ import ca.gc.aafc.dina.export.api.entity.DataExport;
 import ca.gc.aafc.dina.export.api.file.FileController;
 import ca.gc.aafc.dina.export.api.testsupport.jsonapi.JsonApiDocuments;
 import ca.gc.aafc.dina.testsupport.elasticsearch.ElasticSearchTestUtils;
+import ca.gc.aafc.dina.testsupport.jsonapi.JsonAPITestHelper;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -26,10 +27,17 @@ import io.crnk.core.queryspec.QuerySpec;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Future;
 import javax.inject.Inject;
+
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.SerializationFeature;
+import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 
 @ContextConfiguration(initializers = { ElasticSearchTestContainerInitializer.class })
 public class DataExportRepositoryIT extends BaseIntegrationTest {
@@ -73,12 +81,13 @@ public class DataExportRepositoryIT extends BaseIntegrationTest {
         .query(query)
         .columns(List.of("id", "materialSampleName", "collectingEvent.dwcVerbatimLocality",
           "dwcCatalogNumber", "dwcOtherCatalogNumbers", "managedAttributes.attribute_1",
-          "collectingEvent.managedAttributes.attribute_ce_1", "projects.name"))
+          "collectingEvent.managedAttributes.attribute_ce_1", "projects.name", "latLong"))
+          .columnFunctions(Map.of("latLong", new DataExport.FunctionDef(DataExport.FunctionName.CONVERT_COORDINATES_DD, List.of("collectingEvent.eventGeom"))))
         .build());
     assertNotNull(dto.getUuid());
 
     try {
-      asyncConsumer.getAccepted().get(0).get();
+      asyncConsumer.getAccepted().getFirst().get();
     } catch (InterruptedException | ExecutionException e) {
       throw new RuntimeException(e);
     }
@@ -87,6 +96,15 @@ public class DataExportRepositoryIT extends BaseIntegrationTest {
     assertEquals(DataExport.ExportStatus.COMPLETED, savedDataExportDto.getStatus());
     assertEquals(DataExport.ExportType.TABULAR_DATA, savedDataExportDto.getExportType());
     assertEquals("my export", savedDataExportDto.getName());
+
+
+   ObjectMapper IT_OBJECT_MAPPER = new ObjectMapper();
+
+      IT_OBJECT_MAPPER.registerModule(new JavaTimeModule());
+      IT_OBJECT_MAPPER.configure(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS, false);
+      IT_OBJECT_MAPPER.setSerializationInclusion(JsonInclude.Include.NON_NULL);
+
+    System.out.println(IT_OBJECT_MAPPER.writeValueAsString(savedDataExportDto));
 
     ResponseEntity<InputStreamResource>
       response = fileController.downloadFile(dto.getUuid(), FileController.DownloadType.DATA_EXPORT);
@@ -114,6 +132,9 @@ public class DataExportRepositoryIT extends BaseIntegrationTest {
 
     // check that to-many relationships are exported in a similar way of arrays
     assertTrue(lines.get(1).contains("project 1;project 2"));
+
+    // check that the function is working as expected
+    assertTrue(lines.get(1).contains("45.424721,-75.695000"));
 
     // delete the export
     dataExportRepository.delete(dto.getUuid());
